--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
             <ul class="sm">
               <li>Worked on <a href="http://www.rapidvaluesolutions.com/technology-innovations/">rBeacon</a> and citi hackathon ios apps</li>
               <li>Used: Objective C, iPhone SDK. Xcode6.0, JSON</li>
-              <li>Responsible for developing store locator and in-store navigation features. .</li>
+              <li>Responsible for developing store locator and in-store navigation features.</li>
               <li>Maintained code quality and monitor version control.</li>
             </ul>
           </section>
