--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
              <li>Worked on Verizon's PPSH(Personalized Predictive Service Help), a web based work flow creation application for home routers and set-top boxes.</li>
              <li>Used: Java, IBM MQ, jQuery, JavaScript, MySQL, and Web Logic</li>
              <li>Developed various workflows in PPSH.</li>
-             <li>Collaborate with the application architect and backend developers on workflow and API design.</li>
+             <li>Collaborated with the application architect and backend developers on workflow and API design.</li>
              <li>Worked with QA on black-box integration tests.</li>
            </ul>
           </section>
